--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "vercel-build": "npm run build",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "test:server": "node test-server.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
