Fix module not found error: Include server and shared directories in build and update vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,9 @@
         "includeFiles": [
           "dist/**",
           "client/dist/**",
-          "client/public/**"
+          "client/public/**",
+          "server/**",
+          "shared/**"
         ]
       }
     }
