--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "npx vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "npx vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && npx cpx \"server/**/*\" dist/server && npx cpx \"shared/**/*\" dist/shared",
     "start": "cross-env NODE_ENV=development node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "vercel-build": "npm run build",
@@ -93,6 +93,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "cpx": "^1.5.0",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
