Fix: Update vercel.json routes to point to dist/server/index.js

--- a/vercel.json
+++ b/vercel.json
@@ -18,11 +18,11 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/index.ts"
+      "dest": "/dist/server/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server/index.ts"
+      "dest": "/dist/server/index.js"
     }
   ],
   "buildCommand": "npm run vercel-build",
