--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/vercel.ts"
+      "dest": "/api/$1.js"
     },
     {
       "src": "/(.*)",
