--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/vercel.ts",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "client/dist"
+      }
     }
   ],
   "routes": [
@@ -13,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/server/vercel.ts"
+      "dest": "/index.html"
     }
   ]
 }
