--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "dev:client": "cd client && vite",
     "build": "cd client && npx vite build",
+    "build:server": "npx tsx build-server.ts",
     "start": "cross-env NODE_ENV=development node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "vercel-build": "cd client && npx vite build",
