--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,24 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/vercel.ts",
-      "use": "@vercel/node"
+      "src": "server/vercel.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "server/**/*.js",
+          "shared/**/*"
+        ]
+      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/vercel.ts"
+      "dest": "/server/vercel.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server/vercel.ts"
+      "dest": "/server/vercel.js"
     }
   ]
 }
