--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
-    }
+    },
+    "allowJs": true,
+    "checkJs": false
   }
 }
