--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && npx vite build",
+    "build": "cd client && vite build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "check": "tsc"
+    "check": "tsc",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@fontsource/dm-serif-display": "^5.2.8",
