--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cd client && vite build",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "vercel-build": "npm run build"
+    "vercel-build": "cd client && vite build"
   },
   "dependencies": {
     "@fontsource/dm-serif-display": "^5.2.8",
