--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "client/dist"
       }
     },
     {
@@ -23,15 +23,12 @@
       "dest": "/api/$1.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/$1",
-      "methods": [
-        "GET"
-      ]
+      "src": "/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
     },
     {
-      "src": "/",
-      "dest": "/index.html"
+      "src": "/(.*)",
+      "dest": "/client/dist/$1"
     }
   ]
 }
