--- a/package.json
+++ b/package.json
@@ -29,16 +29,19 @@
     "class-variance-authority": "^0.7.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-zod": "^0.8.3",
     "express": "^4.21.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "postcss": "^8.5.6",
+    "prisma": "^6.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16",
     "vite": "^7.1.12",
-    "wouter": "^3.7.1"
+    "wouter": "^3.7.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -47,6 +50,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "cross-env": "^10.1.0",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.20.5",
     "typescript": "5.6.3"
   }
