--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^7.1.12",
     "wouter": "^3.7.1",
     "zod": "^4.1.12"
